prodMetadata/src/objects/Pending_Notification__c.object
<CustomObject>
    <description>This custom Salesforce object will be used to store pending notifications.  A Pending notification simply notes that a user has indicated that a notification message is to be sent out for a Give or non-Give.  The criteria for the notification are also stored in this object.</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to store the ID of the Campaign to which a Contact belongs for this notification to be sent.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Pending Notifications</relationshipLabel>
        <relationshipName>Pending_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <description>The distance</description>
        <label>Distance</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Give__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to store the ID of the Give for which this pending notification applies (if any).</description>
        <label>Give</label>
        <referenceTo>Give__c</referenceTo>
        <relationshipLabel>Pending Notifications</relationshipLabel>
        <relationshipName>Pending_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_Text__c</fullName>
        <description>This field will be used to store the text of the notification message that is to be delivered.</description>
        <label>Message Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to indicate that the notification will be sent nation-wide to all</description>
        <label>National</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will become checked once the pending notification has been processed.</description>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>This field will be used to indicate the states in which a Contact resides that this notification will be sent to.</description>
        <label>State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>This field will be used to indicate the Zip code in which a Contact resides that this notification will be sent to.</description>
        <inlineHelpText>This field will be used to indicate the Zip code in which a Contact resides that this notification will be sent to.</inlineHelpText>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Pending Notification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Pending_Notifications</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Give__c</columns>
        <columns>Message_Text__c</columns>
        <columns>National__c</columns>
        <columns>Processed__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Pending Notifications</label>
    </listViews>
    <nameField>
        <label>Pending Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pending Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Give_Or_Campaign</fullName>
        <active>true</active>
        <description>Validate that the conditions set for a Give notification are valid for the Give (if specified).  Validate that both the Campaign lookup and the Give lookup are not populated at the same time.</description>
        <errorConditionFormula>OR( AND( ISBLANK( Campaign__c ) , ISBLANK( Give__c ) ) , AND( NOT( ISBLANK( Campaign__c ) ), NOT( ISBLANK( Give__c ) ) ) )</errorConditionFormula>
        <errorMessage>The Give or the campaign are required, but no both of them.</errorMessage>
    </validationRules>
</CustomObject>